# Adsparkx_AI

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  app.py  pyproject.toml  requirements.txt
data/md/: api_reference_overview.md  data_export_guide.md  getting_started.md  incident_response_playbook.md  integration_guide.md  mfa_setup_guide.md  rate_limiting_policy.md  subscription_management.md  troubleshooting_connectivity.md  webhook_configuration.md
data/txt/: account_lock_troubleshooting.txt  api_authentication_errors.txt  billing_faq.txt  password_reset_guide.txt
scratch/: latency_test.py
scripts/: generate_kb.py  ingest_kb.py  list_available_models.py  reset_db.py  setup_scaffold.py  test_embedding_models.py
src/agent/: graph.py  state.py
src/config/: settings.py
src/escalation/: handoff.py  triggers.py
src/orchestration/: supervisor.py
src/personas/: detector.py  prompts.py
src/rag/: embeddings.py  ingestion.py  retriever.py
src/sentiment/: analyzer.py
src/utils/: gemini_client.py  logger.py
tests/: conftest.py
tests/integration/: test_e2e_prompting_200.py  test_full_pipeline.py  test_multi_turn_memory.py  test_rate_limit_guard.py
tests/unit/: test_escalation_triggers.py  test_gemini_rate_guard.py  test_handoff_summary.py  test_multi_agent_orchestration.py  test_persona_detection.py  test_rag_retrieval.py  test_response_generation.py  test_sentiment_analyzer.py
ui/: cli.py  streamlit_app.py
ui/components/: escalation_modal.py  persona_badge.py  rate_limit_banner.py  sidebar.py  source_expander.py
(+15 files in other folders)
