[project]
name = "persona-support-agent"
version = "1.0.0"
description = "Persona-Adaptive Customer Support Agent for NovaSuite SaaS platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
